// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse block bullet list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "bulletList",
}
`;

exports[`parse block bullet list 2`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "bulletList",
}
`;

exports[`parse block bullet list: html 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "bulletList",
}
`;

exports[`parse block code block 1`] = `
Object {
  "attrs": Object {
    "language": null,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse block code block: html 1`] = `
Object {
  "attrs": Object {
    "language": null,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse block fence 1`] = `
Object {
  "attrs": Object {
    "language": null,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse block fence: lang 1`] = `
Object {
  "attrs": Object {
    "language": "js",
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse block hard break 1`] = `
Object {
  "content": Array [
    Object {
      "text": "example1",
      "type": "text",
    },
    Object {
      "type": "hardBreak",
    },
    Object {
      "text": "example2",
      "type": "text",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse block hard break: html 1`] = `
Object {
  "content": Array [
    Object {
      "text": "example1",
      "type": "text",
    },
    Object {
      "type": "hardBreak",
    },
    Object {
      "text": "example2",
      "type": "text",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse block headings: h1 1`] = `
Object {
  "attrs": Object {
    "level": 1,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block headings: h1 html 1`] = `
Object {
  "attrs": Object {
    "level": 1,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block headings: h2 1`] = `
Object {
  "attrs": Object {
    "level": 2,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block headings: h3 1`] = `
Object {
  "attrs": Object {
    "level": 3,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block headings: h4 1`] = `
Object {
  "attrs": Object {
    "level": 4,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block headings: h5 1`] = `
Object {
  "attrs": Object {
    "level": 5,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block headings: h6 1`] = `
Object {
  "attrs": Object {
    "level": 6,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse block hr 1`] = `
Object {
  "type": "horizontalRule",
}
`;

exports[`parse block hr: html 1`] = `
Object {
  "type": "horizontalRule",
}
`;

exports[`parse block html 1`] = `
Object {
  "type": "html",
}
`;

exports[`parse block html inline 1`] = `
Object {
  "content": Array [
    Object {
      "type": "html",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse block image 1`] = `
Object {
  "attrs": Object {
    "alt": "example",
    "src": "example.jpg",
    "title": null,
  },
  "type": "image",
}
`;

exports[`parse block image: html 1`] = `
Object {
  "attrs": Object {
    "alt": "example",
    "src": "example.jpg",
    "title": null,
  },
  "type": "image",
}
`;

exports[`parse block image: inline 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "alt": "example",
        "src": "example.jpg",
        "title": null,
      },
      "type": "image",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse block ordered list 1`] = `
Object {
  "attrs": Object {
    "start": 1,
  },
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "orderedList",
}
`;

exports[`parse block ordered list: html 1`] = `
Object {
  "attrs": Object {
    "start": 1,
  },
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "orderedList",
}
`;

exports[`parse block paragraph 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "example1",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "content": Array [
      Object {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse block paragraph: html 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "example1",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "content": Array [
      Object {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse block table 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
      ],
      "type": "tableRow",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example4",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
      ],
      "type": "tableRow",
    },
  ],
  "type": "table",
}
`;

exports[`parse block table: html 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
      ],
      "type": "tableRow",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example4",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
      ],
      "type": "tableRow",
    },
  ],
  "type": "table",
}
`;

exports[`parse inline bold 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "bold",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline bold: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "bold",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline code 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "code",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline code: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "code",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline italic 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "italic",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline italic: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "italic",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline link 1`] = `
Object {
  "marks": Array [
    Object {
      "attrs": Object {
        "href": "http://example.org",
        "target": "_blank",
      },
      "type": "link",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline link: html 1`] = `
Object {
  "marks": Array [
    Object {
      "attrs": Object {
        "href": "http://example.org",
        "target": "_blank",
      },
      "type": "link",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline strike 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "strike",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline strike: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "strike",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse inline text 1`] = `
Object {
  "text": "example",
  "type": "text",
}
`;
